[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajson = "0.3.1"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
serde = "1.0.202"
serde_json = "1.0.117"
serde_json_path = "0.6.7"
